--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<title>js13kGames Resources</title>
 	<link rel="shortcut icon" href="favicon.png">
 	<link rel="stylesheet" href="style.css">
-	<meta name="description" content="DESCRIPTION" />
+	<meta name="description" content="This is a list of useful links, resources and tutorials for creating an js13kGames entry." />
+	<meta property="og:image" content="http://js13kgames.com/img/logo.png"/>
 </head>
 <body>
 <header>
