--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header>
 	<nav>
-		<a class="logo" href="/">js13kGames</a>
+		<a class="logo" href="">js13kGames</a>
 		<ul>
 			<li><a href="http://2015.js13kgames.com/">2015</a></li>
 			<li><a href="http://2014.js13kgames.com/">2014</a></li>
