--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
 	<li><a href="https://github.com/kevincennis/TinyMusic">TinyMusic</a> - a simple, lightweight music synth/sequencer in JavaScript using the Web Audio API</li>
 </ul>
 
+<h3>Minification</h3>
+<ul>
+	<li><a href="http://dean.edwards.name/packer/">Packer</a> - a JavaScript compressor</li>
+	<li><a href="http://javascript-minifier.com/">JavaScript Minifier</a> - minify your JavaScript</li>
+	<li><a href="https://github.com/Siorki/RegPack">RegPack</a> -  self-contained packer for size-constrained JS code</li>
+	<li><a href="http://closure-compiler.appspot.com/home">Closure Compiler</a> - compile your code</li>
+	<li><a href="https://github.com/mishoo/UglifyJS">UglifyJS</a> - JavaScript parser / mangler / compressor / beautifier library for NodeJS</li>
+	<li><a href="http://www.slideshare.net/DavidGoemans/extreme-javascript-minification">Extreme Javascript minification</a> - compression experiments</li>
+</ul>
+
 <h3>Artwork</h3>
 <ul>
 	<li><a href="http://codepen.io/agares/pen/CtxuE/">Sprite generator</a> - 1 color sprite interpreter</li>
@@ -66,16 +76,7 @@
 	<li><a href="https://github.com/aurium/js-game-server">js-game-server</a> - sandboxed JavaScript game server</li>
 	<li><a href="http://www.pixenapp.com/">Pixen</a> - pixel art editor for Mac OS X</li>
 	<li><a href="http://khan.github.io/live-editor/demos/simple/">Live Editor</a> - edit JavaScript code</li>
-</ul>
-
-<h3>Minification and compression</h3>
-<ul>
-	<li><a href="http://dean.edwards.name/packer/">Packer</a> - a JavaScript compressor</li>
-	<li><a href="http://javascript-minifier.com/">JavaScript Minifier</a> - minify your JavaScript</li>
-	<li><a href="https://github.com/Siorki/RegPack">RegPack</a> -  self-contained packer for size-constrained JS code</li>
-	<li><a href="http://closure-compiler.appspot.com/home">Closure Compiler</a> - compile your code</li>
-	<li><a href="https://github.com/mishoo/UglifyJS">UglifyJS</a> - JavaScript parser / mangler / compressor / beautifier library for NodeJS</li>
-	<li><a href="http://www.slideshare.net/DavidGoemans/extreme-javascript-minification">Extreme Javascript minification</a> - compression experiments</li>
+	<li><a href="https://github.com/allouis/minivents">Minivents</a> - small event system for JavaScript</li>
 </ul>
 
 <h3>Tutorials</h3>
