--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <ul>
 	<li><a href="http://codepen.io/agares/pen/CtxuE/">Sprite generator</a> - 1 color sprite interpreter</li>
 	<li><a href="http://www.iquilezles.org/www/articles/voronoise/voronoise.htm">Voronoise</a> - procedural pattern generation</li>
+	<li><a href="https://github.com/download13/blockies">Blockies</a> - identicon generation</li>
 </ul>
 
 <h3>Image compression</h3>
