Jupiter Hadley videos

--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
 	<li><a href="http://www.playfuljs.com/a-first-person-engine-in-265-lines/">A first-person engine in 265 lines</a></li>
 </ul>
 
+<h3>Videos</h3>
+<ul>
+	<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85cletut9NULJwgEtN01TYWm">Jupi Plays Indie Games</a> - youtube playlist with Jupiter Hadley playing all the games from the 2014 edition</li>
+</ul>
+
 <h3>Blog posts and post mortems</h3>
 <ul>
 	<li><a href=""></a></li>
