--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<li><a href="http://www.slideshare.net/DavidGoemans/extreme-javascript-minification">Extreme Javascript minification</a> - compression experiments</li>
 </ul>
 
-<h3>Artwork</h3>
+<h3>Artwork and fonts</h3>
 <ul>
 	<li><a href="http://codepen.io/agares/pen/CtxuE/">Sprite generator</a> - 1 color sprite interpreter</li>
 	<li><a href="http://www.iquilezles.org/www/articles/voronoise/voronoise.htm">Voronoise</a> - procedural pattern generation</li>
