Ocelot and OpenGameArt

--- a/index.html
+++ b/index.html
@@ -36,16 +36,28 @@
 	<li><a href="http://jallegro.sos.gd/">jAllegro</a> - a JavaScript port of a game programming library</li>
 	<li><a href="https://github.com/lucaspenney/js13k-toolkit">js13k-toolkit</a> - starter repository for js13kGames, a set of tools for developing a JS game and keeping it under 13kb</li>
 	<li><a href="https://github.com/spmurrayzzz/js13k-requirejs">js13k-requirejs</a> - require.js-powered application template with build tools</li>
+	<li><a href="https://github.com/geoffb/ocelot">Ocelot</a> - a minimalist HTML5 2D game engine, Ocelot aims for simplicity and small fizesize</li>
 </ul>
 
 <h3>Sound and music</h3>
 <ul>
 	<li><a href="http://sb.bitsnbites.eu/">SoundBox</a> - an HTML5 synth music tracker</li>
 	<li><a href="https://github.com/mneubrand/jsfxr">jsfxr</a> - <a href="http://www.superflashbros.net/as3sfxr/">as3sfxr</a> synth port to JavaScript</li>
-	<li><a href="http://codepen.io/jackrugile/blog/arcade-audio-for-js13k-games">Arcade audio for js13kGames</a></li>
+	<li><a href="http://codepen.io/jackrugile/blog/arcade-audio-for-js13k-games">Arcade audio for js13kGames</a> - blog post about generating your own sound effects</li>
 	<li><a href="https://github.com/nicolas-van/sonant-x">Sonant-X</a> - small JavaScript synthesizer library</li>
 	<li><a href="http://www.cappel-nord.de/webaudio/">Web Audio API prototypes</a> - demos using the Web Audio API to synthesize audio in the browser</li>
 	<li><a href="https://github.com/kevincennis/TinyMusic">TinyMusic</a> - a simple, lightweight music synth/sequencer in JavaScript using the Web Audio API</li>
+</ul>
+
+<h3>Artwork and fonts</h3>
+<ul>
+	<li><a href="http://opengameart.org">OpenGameArt</a> - free graphics assets</li>
+	<li><a href="http://codepen.io/agares/pen/CtxuE/">Sprite generator</a> - 1 color sprite interpreter</li>
+	<li><a href="http://www.iquilezles.org/www/articles/voronoise/voronoise.htm">Voronoise</a> - procedural pattern generation</li>
+	<li><a href="https://github.com/download13/blockies">Blockies</a> - identicon generation</li>
+	<li><a href="http://www.pixenapp.com/">Pixen</a> - pixel art editor for Mac OS X</li>
+	<li><a href="http://compresspng.com/">CompressPNG</a> - Compress PNGs online</li>
+	<li><a href="http://tinypng.com/">TinyPNG</a> - advanced lossy compression for PNG images that preserves full alpha transparency</li>
 </ul>
 
 <h3>Minification</h3>
@@ -58,25 +70,11 @@
 	<li><a href="http://www.slideshare.net/DavidGoemans/extreme-javascript-minification">Extreme Javascript minification</a> - compression experiments</li>
 </ul>
 
-<h3>Artwork and fonts</h3>
-<ul>
-	<li><a href="http://codepen.io/agares/pen/CtxuE/">Sprite generator</a> - 1 color sprite interpreter</li>
-	<li><a href="http://www.iquilezles.org/www/articles/voronoise/voronoise.htm">Voronoise</a> - procedural pattern generation</li>
-	<li><a href="https://github.com/download13/blockies">Blockies</a> - identicon generation</li>
-</ul>
-
-<h3>Image compression</h3>
-<ul>
-	<li><a href="http://compresspng.com/">CompressPNG</a> - Compress PNGs online</li>
-	<li><a href="http://tinypng.com/">TinyPNG</a> - advanced lossy compression for PNG images that preserves full alpha transparency</li>
-</ul>
-
 <h3>Other tools</h3>
 <ul>
 	<li><a href="http://videogamena.me/">Video Game Name Generator</a> - generate a name for your game</li>
 	<li><a href="https://github.com/mrdoob/stats.js/">stats.js</a> - JavaScript performance monitor</li>
 	<li><a href="https://github.com/aurium/js-game-server">js-game-server</a> - sandboxed JavaScript game server</li>
-	<li><a href="http://www.pixenapp.com/">Pixen</a> - pixel art editor for Mac OS X</li>
 	<li><a href="http://khan.github.io/live-editor/demos/simple/">Live Editor</a> - edit JavaScript code</li>
 	<li><a href="https://github.com/allouis/minivents">Minivents</a> - small event system for JavaScript</li>
 </ul>
