--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 	<li><a href="http://www.pixenapp.com/">Pixen</a> - pixel art editor for Mac OS X</li>
 	<li><a href="http://compresspng.com/">CompressPNG</a> - Compress PNGs online</li>
 	<li><a href="http://tinypng.com/">TinyPNG</a> - advanced lossy compression for PNG images that preserves full alpha transparency</li>
+	<li><a href="https://github.com/PaulBGD/PixelFont">Pixel Font</a> - tiny pixel font</li>
 </ul>
 
 <h3>Minification</h3>
