Add JS13k starter repo to starter kits

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
 	<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85cletut9NULJwgEtN01TYWm">Jupi Plays Indie Games</a> - youtube playlist with Jupiter Hadley playing all the games from the 2014 edition</li>
 </ul>
 
+<h3 id="posts">Starter Kits</h3>
+<ul>
+	<li><a href="https://github.com/aymanfarhat/js13k-starter">J13K Starter</a> - Sample J13K project structure, example and Gulp build process.</li>
+</ul>
+
 <h3 id="posts">Blog posts and post mortems</h3>
 <ul>
 	<li><a href=""></a></li>
