--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
 
 <h3 id="vids">Videos</h3>
 <ul>
-	<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85cletut9NULJwgEtN01TYWm">Jupi Plays Indie Games</a> - youtube playlist with Jupiter Hadley playing all the games from the 2014 edition</li>
+	<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85cletut9NULJwgEtN01TYWm">Jupi Plays Indie Games</a> - YouTube playlist with Jupiter Hadley playing all the games from the 2014 edition</li>
+	<li><a href="https://www.youtube.com/playlist?list=PL94Kxubp5fYe3XwC3rIeybFUhIkeuhJym">Let's play vids for js13k 2015</a> - Youtube playlist by Keith Karnage</li>
 </ul>
 
 <h3 id="posts">Blog posts and post mortems</h3>
