Jupiter Hadley gameplays

--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
 
 <h3 id="vids">Videos</h3>
 <ul>
-	<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85cletut9NULJwgEtN01TYWm">Jupi Plays Indie Games</a> - YouTube playlist with Jupiter Hadley playing all the games from the 2014 edition</li>
-	<li><a href="https://www.youtube.com/playlist?list=PL94Kxubp5fYe3XwC3rIeybFUhIkeuhJym">Let's play vids for js13k 2015</a> - Youtube playlist by Keith Karnage</li>
+	<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85cletut9NULJwgEtN01TYWm">Jupi Plays Indie Games 2014</a> - YouTube playlist with Jupiter Hadley playing all the games from the 2014 edition</li>
+	<li><a href="https://www.youtube.com/playlist?list=PL94Kxubp5fYe3XwC3rIeybFUhIkeuhJym">Let's play vids for js13k 2015</a> - YouTube playlist for 2015 entries by Keith Karnage</li>
+	<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85czCO1G2UgwvxRpzGw8P2Bn">Jupi Plays Indie Games 2015</a> - YouTube playlist for 2015 entries by Jupiter Hadley</li>
 </ul>
 
 <h3 id="posts">Blog posts and post mortems</h3>
