--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 	<li><a href="https://github.com/morazor/TCM/wiki">Marco Emiliozzi about skeletal animation in The Cursed Mirror</a></li>
 	<li><a href="https://github.com/madmaw/LD33/blob/master/README.md">Chris Glover about Poust</a></li>
 	<li><a href="https://github.com/MakeshiftMitten/bombsaway/blob/master/README.md">Makeshift Mitten about Bombs Away</a></li>
+	<li><a href="http://www.loganfranken.com/blog/1226/my-second-js13k/">Logan Franken about ParaTec Systems</a></li>
 	<li>(add yours)</li>
 </ul>
 
