--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
 	<li><a href="https://github.com/madmaw/LD33/blob/master/README.md">Chris Glover about Poust</a></li>
 	<li><a href="https://github.com/MakeshiftMitten/bombsaway/blob/master/README.md">Makeshift Mitten about Bombs Away</a></li>
 	<li><a href="http://www.loganfranken.com/blog/1226/my-second-js13k/">Logan Franken about ParaTec Systems</a></li>
+	<li><a href="http://fireside.gamejolt.com/post/7-great-js13k-2015-games-icyrzrkp">7 Great JS13K 2015 Games</a> by Paul Hack at Gamejolt Fireside</li>
+	<li><a href="http://fireside.gamejolt.com/post/jam-favorites-js13kgames-jam-fax27wgm">Jam Favorites: JS13KGames Jam</a> by Jupiter Hadley at Gamejolt Fireside</li>
 	<li>(add yours)</li>
 </ul>
 
