--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<nav>
 		<a class="logo" href="">js13kGames</a>
 		<ul>
+			<li><a href="http://2016.js13kgames.com/">2016</a></li>
 			<li><a href="http://2015.js13kgames.com/">2015</a></li>
 			<li><a href="http://2014.js13kgames.com/">2014</a></li>
 			<li><a href="http://2013.js13kgames.com/">2013</a></li>
@@ -126,7 +127,7 @@
 
 <footer>
 	<div>
-		&copy; js13kGames 2012-2015.
+		&copy; js13kGames 2012-2016.
 		<p>Created and maintained by <a target="_blank" href="http://end3r.com/">Andrzej Mazur</a> from <a target="_blank" href="http://enclavegames.com/">Enclave Games</a>.</p>
 	</div>
 </footer>
