--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	<li><a href="https://github.com/lucaspenney/js13k-toolkit">js13k-toolkit</a> - starter repository for js13kGames, a set of tools for developing a JS game and keeping it under 13kb</li>
 	<li><a href="https://github.com/spmurrayzzz/js13k-requirejs">js13k-requirejs</a> - require.js-powered application template with build tools</li>
 	<li><a href="https://github.com/aymanfarhat/js13k-starter">js13k-starter</a> - sample js13k project structure, example and Gulp build process</li>
+	<li><a href="">Tiny-Canvas</a> - a lightweight minimal implementation of a batched and stack matrix based Canvas with WebGL backend</li>
 </ul>
 
 <h3 id="sfx">Sound and music</h3>
