updated server repo link

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 <ul>
 	<li><a href="http://videogamena.me/">Video Game Name Generator</a> - generate a name for your game</li>
 	<li><a href="https://github.com/mrdoob/stats.js/">stats.js</a> - JavaScript performance monitor</li>
-	<li><a href="https://github.com/aurium/js-game-server">js-game-server</a> - sandboxed JavaScript game server</li>
 	<li><a href="http://khan.github.io/live-editor/demos/simple/">Live Editor</a> - edit JavaScript code</li>
 	<li><a href="https://github.com/allouis/minivents">Minivents</a> - small event system for JavaScript</li>
 	<li><a href="https://gist.github.com/xem/99930986c5333125a13b0ea50600391f">Maths and trigonometry cheat sheet for 2D games</a></li>
+	<li><a href="https://github.com/js13kGames/js13kserver">js13kserver</a> - sandboxed JavaScript game server</li>	
 </ul>
 
 <h3 id="tuts">Tutorials</h3>
