--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 	<li><a href="https://github.com/spmurrayzzz/js13k-requirejs">js13k-requirejs</a> - require.js-powered application template with build tools</li>
 	<li><a href="https://github.com/spmurrayzzz/js13k-rollup">js13k-rollup</a> - gulp/rollup.js powered template with support for ES2015 modules and build tools</li>
 	<li><a href="https://github.com/aymanfarhat/js13k-starter">js13k-starter</a> - sample js13k project structure, example and Gulp build process</li>
-	<li><a href="">Tiny-Canvas</a> - a lightweight minimal implementation of a batched and stack matrix based Canvas with WebGL backend</li>
+	<li><a href="https://github.com/bitnenfer/tiny-canvas">Tiny-Canvas</a> - lightweight minimal implementation of a batched and stack matrix based Canvas with WebGL backend</li>
+	<li><a href="https://github.com/kittykatattack/ga">Ga</a> - tiny, cute and friendly system for making HTML5 games</li>
 </ul>
 
 <h3 id="sfx">Sound and music</h3>
