--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 	<li><a href="https://github.com/aymanfarhat/js13k-starter">js13k-starter</a> - sample js13k project structure, example and Gulp build process</li>
 	<li><a href="https://github.com/bitnenfer/tiny-canvas">Tiny-Canvas</a> - lightweight minimal implementation of a batched and stack matrix based Canvas with WebGL backend</li>
 	<li><a href="https://github.com/kittykatattack/ga">Ga</a> - tiny, cute and friendly system for making HTML5 games</li>
+	<li><a href="https://github.com/xem/platform-engine">platform-engine</a> - A 2D platform engine that handles collisions, slopes, rotations, etc.</li>
 </ul>
 
 <h3 id="sfx">Sound and music</h3>
@@ -52,6 +53,7 @@
 	<li><a href="https://github.com/nicolas-van/sonant-x">Sonant-X</a> - small JavaScript synthesizer library</li>
 	<li><a href="http://www.cappel-nord.de/webaudio/">Web Audio API prototypes</a> - demos using the Web Audio API to synthesize audio in the browser</li>
 	<li><a href="https://github.com/kevincennis/TinyMusic">TinyMusic</a> - a simple, lightweight music synth/sequencer in JavaScript using the Web Audio API</li>
+	<li><a href="https://github.com/xem/miniPiano">miniPiano</a> - a JS synth featuring a graphical editor and small JS output</li>
 </ul>
 
 <h3 id="gfx">Artwork and fonts</h3>
@@ -65,6 +67,7 @@
 	<li><a href="http://compresspng.com/">CompressPNG</a> - compress PNGs online</li>
 	<li><a href="http://tinypng.com/">TinyPNG</a> - advanced lossy compression for PNG images that preserves full alpha transparency</li>
 	<li><a href="https://github.com/PaulBGD/PixelFont">Pixel Font</a> - tiny pixel font</li>
+	<li><a href="https://github.com/xem/js13k-graphics-editor"></a>js13k-graphics-editor - Draw with your mouse and export the result as a tiny JS snippet</li>
 </ul>
 
 <h3 id="mini">Minification</h3>
@@ -84,7 +87,8 @@
 	<li><a href="http://khan.github.io/live-editor/demos/simple/">Live Editor</a> - edit JavaScript code</li>
 	<li><a href="https://github.com/allouis/minivents">Minivents</a> - small event system for JavaScript</li>
 	<li><a href="https://gist.github.com/xem/99930986c5333125a13b0ea50600391f">Maths and trigonometry cheat sheet for 2D games</a></li>
-	<li><a href="https://github.com/js13kGames/js13kserver">js13kserver</a> - sandboxed JavaScript game server</li>	
+	<li><a href="https://github.com/js13kGames/js13kserver">js13kserver</a> - sandboxed JavaScript game server</li>
+	<li><a href="https://github.com/xem/js13k-level-editor"></a>js13k-level-editor - A 1kb 2D map editor that you can use for your game (or include in your game!)</li>
 </ul>
 
 <h3 id="tuts">Tutorials</h3>
@@ -95,6 +99,7 @@
 	<li><a href="http://codeincomplete.com/posts/2013/5/27/tiny_platformer/">Tiny platformer</a></li>
 	<li><a href="http://www.playfuljs.com/a-first-person-engine-in-265-lines/">A first-person engine in 265 lines</a></li>
 	<li><a href="http://ojdon.github.io/blog/HTML5-Game-Development-Gulp-Workflow/">HTML5 game development Gulp workflow</a></li>
+	<li><a href="https://gist.github.com/xem/99930986c5333125a13b0ea50600391f">Trigonometry cheat sheet</a></li>
 </ul>
 
 <h3 id="vids">Videos</h3>
