--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	<li><a href="http://compresspng.com/">CompressPNG</a> - compress PNGs online</li>
 	<li><a href="http://tinypng.com/">TinyPNG</a> - advanced lossy compression for PNG images that preserves full alpha transparency</li>
 	<li><a href="https://github.com/PaulBGD/PixelFont">Pixel Font</a> - tiny pixel font</li>
-	<li><a href="https://github.com/xem/js13k-graphics-editor"></a>js13k-graphics-editor - Draw with your mouse and export the result as a tiny JS snippet</li>
+	<li><a href="https://github.com/xem/js13k-graphics-editor">js13k-graphics-editor</a> - Draw with your mouse and export the result as a tiny JS snippet</li>
 </ul>
 
 <h3 id="mini">Minification</h3>
@@ -88,7 +88,7 @@
 	<li><a href="https://github.com/allouis/minivents">Minivents</a> - small event system for JavaScript</li>
 	<li><a href="https://gist.github.com/xem/99930986c5333125a13b0ea50600391f">Maths and trigonometry cheat sheet for 2D games</a></li>
 	<li><a href="https://github.com/js13kGames/js13kserver">js13kserver</a> - sandboxed JavaScript game server</li>
-	<li><a href="https://github.com/xem/js13k-level-editor"></a>js13k-level-editor - A 1kb 2D map editor that you can use for your game (or include in your game!)</li>
+	<li><a href="https://github.com/xem/js13k-level-editor">js13k-level-editor</a> - A 1kb 2D map editor that you can use for your game (or include in your game!)</li>
 </ul>
 
 <h3 id="tuts">Tutorials</h3>
