Update broken link
Update broken link of `ox - a tiny 2D game framework for the web`

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <h3 id="engine">Micro game engines and boilerplates</h3>
 <ul>
-	<li><a href="http://ox2d.com/">ox</a> - a tiny 2D game framework for the web</li>
+	<li><a href="https://github.com/OttoRobba/ox">ox</a> - a tiny 2D game framework for the web</li>
 	<li><a href="https://github.com/Gozala/selfish">Selfish</a> - class-free, pure prototypal inheritance</li>
 	<li><a href="https://github.com/michalbe/mibbu">Mibbu</a> - Javascript game microframework</li>
 	<li><a href="http://jallegro.sos.gd/">jAllegro</a> - a JavaScript port of a game programming library</li>
