--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
 	<li><a href="http://tinypng.com/">TinyPNG</a> - advanced lossy compression for PNG images that preserves full alpha transparency</li>
 	<li><a href="https://github.com/PaulBGD/PixelFont">Pixel Font</a> - tiny pixel font</li>
 	<li><a href="https://github.com/xem/js13k-graphics-editor">js13k-graphics-editor</a> - Draw with your mouse and export the result as a tiny JS snippet</li>
+	<li><a href="http://www.piskelapp.com/">Piskel</a> - Pixel Art and Animated Sprites</li>
+	<li><a href="http://www.aseprite.org/">aseprite</a> - animated sprite editor & pixel art tool</li>
+	<li><a href="http://pyxeledit.com/>Pyxel Edit</a> - is a pixel art editor designed to make it fun and easy to make tilesets, levels and animations</li>
+	<li><a href=""></a> - </li>
+	
 </ul>
 
 <h3 id="mini">Minification</h3>
