--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
 	<li><a href="https://github.com/PaulBGD/PixelFont">Pixel Font</a> - tiny pixel font</li>
 	<li><a href="https://github.com/xem/js13k-graphics-editor">js13k-graphics-editor</a> - Draw with your mouse and export the result as a tiny JS snippet</li>
 	<li><a href="http://www.piskelapp.com/">Piskel</a> - Pixel Art and Animated Sprites</li>
-	<li><a href="http://www.aseprite.org/">aseprite</a> - animated sprite editor & pixel art tool</li>
-	<li><a href="http://pyxeledit.com/>Pyxel Edit</a> - is a pixel art editor designed to make it fun and easy to make tilesets, levels and animations</li>
-	
+	<li><a href="http://www.aseprite.org/">aseprite</a> - animated sprite editor &amp; pixel art tool</li>
+	<li><a href="http://pyxeledit.com">Pyxel Edit</a> - is a pixel art editor designed to make it fun and easy to make tilesets, levels and animations</li>
 </ul>
 
 <h3 id="mini">Minification</h3>
