Zenva video tuts

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 		<li><a href="http://www.playfuljs.com/a-first-person-engine-in-265-lines/">A first-person engine in 265 lines</a></li>
 		<li><a href="http://ojdon.github.io/blog/HTML5-Game-Development-Gulp-Workflow/">HTML5 game development Gulp workflow</a></li>
 		<li><a href="https://gist.github.com/xem/99930986c5333125a13b0ea50600391f">Trigonometry cheat sheet</a></li>
+		<li><a href="https://gamedevacademy.org/js13kgames-tutorial-video-series/">js13kGames tutorial video series by Zenva Academy</a></li>
 	</ul>
 
 	<h3 id="vids">Videos</h3>
