--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 		<li><a href="http://ojdon.github.io/blog/HTML5-Game-Development-Gulp-Workflow/">HTML5 game development Gulp workflow</a></li>
 		<li><a href="https://gist.github.com/xem/99930986c5333125a13b0ea50600391f">Trigonometry cheat sheet</a></li>
 		<li><a href="https://gamedevacademy.org/js13kgames-tutorial-video-series/">js13kGames tutorial video series by Zenva Academy</a></li>
+		<li><a href="https://xem.github.io/articles/#jsgamesinputs">How to support arrow keys, WASD and ZQSD keyboard inputs in just 160b of JS</a></li>
 	</ul>
 
 	<h3 id="vids">Videos</h3>
