--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		<li><a href="https://gist.github.com/xem/99930986c5333125a13b0ea50600391f">Maths and trigonometry cheat sheet for 2D games</a></li>
 		<li><a href="https://github.com/js13kGames/js13kserver">js13kserver</a> - sandboxed JavaScript game server</li>
 		<li><a href="https://github.com/xem/js13k-level-editor">js13k-level-editor</a> - A 1kb 2D map editor that you can use for your game (or include in your game!)</li>
-		<li><a href="https://github.com/xenohunter/timestore">timestore</a> - a library to manage multiple timers inside separate contextes
+		<li><a href="https://github.com/xenohunter/timestore">timestore</a> - a library to manage multiple timers inside separate contexts</li>
 	</ul>
 
 	<h3 id="tuts">Tutorials</h3>
