Add link to Blade Gunner post-mortem

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 		<li><a href="http://theperplactory.net/postmortem-js13k-2016/">"Shuttle Power Dash" Post Mortem</a></li>
 		<li><a href="https://github.com/PixelJerry/JS13K_Nexus_overload/wiki/Making-of-Nexus-overload">Making of Nexus overload</a></li>
 		<li><a href="https://github.com/vonloxx/js13k-2016/">"PULSE" Post Mortem</a></li>
+		<li><a href="https://medium.com/@herebefrogs/blade-gunner-js13kgames-2016-post-mortem-6786d2237733">Blade Gunner Post-Mortem</a> by Jerome Lecomte</li>
 		<li>(add yours)</li>
 	</ul>
 
