--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 		<li><a href="https://github.com/PixelJerry/JS13K_Nexus_overload/wiki/Making-of-Nexus-overload">Making of Nexus overload</a></li>
 		<li><a href="https://github.com/vonloxx/js13k-2016/">"PULSE" Post Mortem</a></li>
 		<li><a href="https://medium.com/@herebefrogs/blade-gunner-js13kgames-2016-post-mortem-6786d2237733">Blade Gunner Post-Mortem</a> by Jerome Lecomte</li>
+		<li>James Wright on <a href="https://jamesswright.co.uk/blog/1474997-glitch-hunt-js13kgames-2016">Glitch Hunt</a></li>
 		<li>(add yours)</li>
 	</ul>
 
