Added "glitch torpedo" post mortem

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 		<li><a href="https://github.com/vonloxx/js13k-2016/">"PULSE" Post Mortem</a></li>
 		<li><a href="https://medium.com/@herebefrogs/blade-gunner-js13kgames-2016-post-mortem-6786d2237733">Blade Gunner Post-Mortem</a> by Jerome Lecomte</li>
 		<li>James Wright on <a href="https://jamesswright.co.uk/blog/1474997-glitch-hunt-js13kgames-2016">Glitch Hunt</a></li>
+		<li><a href="https://github.com/plissken2013es/glitch-torpedo-js13k2016/blob/master/README.md">"Glitch torpedo" Post Mortem regarding server logic</a></li>		
 		<li>(add yours)</li>
 	</ul>
 
