--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 		<li><a href="https://github.com/bitnenfer/tiny-canvas">Tiny-Canvas</a> - lightweight minimal implementation of a batched and stack matrix based Canvas with WebGL backend</li>
 		<li><a href="https://github.com/kittykatattack/ga">Ga</a> - tiny, cute and friendly system for making HTML5 games</li>
 		<li><a href="https://github.com/xem/platform-engine">platform-engine</a> - A 2D platform engine that handles collisions, slopes, rotations, etc.</li>
+		<li><a href="https://github.com/voronianski-on-games/js13kGames-boilerplate">js13kGames-boilerplate</a> - Minimum game starter kit includes game loop, utility functions and webpack configuration to package game with just one command</li>
 	</ul>
 
 	<h3 id="sfx">Sound and music</h3>
