--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
 	<h3 id="engine">Micro game engines and boilerplates</h3>
 	<ul>
-		<li><a href="https://github.com/OttoRobba/ox">ox</a> - a tiny 2D game framework for the web</li>
+		<li><a href="https://github.com/OttoRobba/ox">ox</a> - tiny 2D game framework for the web</li>
 		<li><a href="https://github.com/Gozala/selfish">Selfish</a> - class-free, pure prototypal inheritance</li>
 		<li><a href="https://github.com/michalbe/mibbu">Mibbu</a> - Javascript game microframework</li>
-		<li><a href="http://jallegro.sos.gd/">jAllegro</a> - a JavaScript port of a game programming library</li>
-		<li><a href="https://github.com/geoffb/ocelot">Ocelot</a> - a minimalist HTML5 2D game engine, Ocelot aims for simplicity and small fizesize</li>
+		<li><a href="http://jallegro.sos.gd/">jAllegro</a> - JavaScript port of a game programming library</li>
+		<li><a href="https://github.com/geoffb/ocelot">Ocelot</a> - minimalist HTML5 2D game engine, Ocelot aims for simplicity and small fizesize</li>
 		<li><a href="https://github.com/ooflorent/js13k-boilerplate">js13k-boilerplate</a> - js13kGames boilerplate</li>
 		<li><a href="https://github.com/lucaspenney/js13k-toolkit">js13k-toolkit</a> - starter repository for js13kGames, a set of tools for developing a JS game and keeping it under 13kb</li>
 		<li><a href="https://github.com/spmurrayzzz/js13k-requirejs">js13k-requirejs</a> - require.js-powered application template with build tools</li>
@@ -45,8 +45,8 @@
 		<li><a href="https://github.com/aymanfarhat/js13k-starter">js13k-starter</a> - sample js13k project structure, example and Gulp build process</li>
 		<li><a href="https://github.com/bitnenfer/tiny-canvas">Tiny-Canvas</a> - lightweight minimal implementation of a batched and stack matrix based Canvas with WebGL backend</li>
 		<li><a href="https://github.com/kittykatattack/ga">Ga</a> - tiny, cute and friendly system for making HTML5 games</li>
-		<li><a href="https://github.com/xem/platform-engine">platform-engine</a> - A 2D platform engine that handles collisions, slopes, rotations, etc.</li>
-		<li><a href="https://github.com/voronianski-on-games/js13kGames-boilerplate">js13kGames-boilerplate</a> - Minimum game starter kit includes game loop, utility functions and webpack configuration to package game with just one command</li>
+		<li><a href="https://github.com/xem/platform-engine">platform-engine</a> - 2D platform engine that handles collisions, slopes, rotations, etc.</li>
+		<li><a href="https://github.com/voronianski-on-games/js13kGames-boilerplate">js13kGames-boilerplate</a> - includes game loop, utility functions and webpack config to package game with just one command</li>
 	</ul>
 
 	<h3 id="sfx">Sound and music</h3>
@@ -56,8 +56,8 @@
 		<li><a href="http://codepen.io/jackrugile/blog/arcade-audio-for-js13k-games">Arcade audio for js13kGames</a> - blog post about generating your own sound effects</li>
 		<li><a href="https://github.com/nicolas-van/sonant-x">Sonant-X</a> - small JavaScript synthesizer library</li>
 		<li><a href="http://www.cappel-nord.de/webaudio/">Web Audio API prototypes</a> - demos using the Web Audio API to synthesize audio in the browser</li>
-		<li><a href="https://github.com/kevincennis/TinyMusic">TinyMusic</a> - a simple, lightweight music synth/sequencer in JavaScript using the Web Audio API</li>
-		<li><a href="https://github.com/xem/miniPiano">miniPiano</a> - a JS synth featuring a graphical editor and small JS output</li>
+		<li><a href="https://github.com/kevincennis/TinyMusic">TinyMusic</a> - simple, lightweight music synth/sequencer in JavaScript using the Web Audio API</li>
+		<li><a href="https://github.com/xem/miniPiano">miniPiano</a> - JS synth featuring a graphical editor and small JS output</li>
 	</ul>
 
 	<h3 id="gfx">Artwork and fonts</h3>
@@ -79,7 +79,7 @@
 
 	<h3 id="mini">Minification</h3>
 	<ul>
-		<li><a href="http://dean.edwards.name/packer/">Packer</a> - a JavaScript compressor</li>
+		<li><a href="http://dean.edwards.name/packer/">Packer</a> - JavaScript compressor</li>
 		<li><a href="http://javascript-minifier.com/">JavaScript Minifier</a> - minify your JavaScript</li>
 		<li><a href="https://github.com/Siorki/RegPack">RegPack</a> -  self-contained packer for size-constrained JS code</li>
 		<li><a href="http://closure-compiler.appspot.com/home">Closure Compiler</a> - compile your code</li>
@@ -95,8 +95,8 @@
 		<li><a href="https://github.com/allouis/minivents">Minivents</a> - small event system for JavaScript</li>
 		<li><a href="https://gist.github.com/xem/99930986c5333125a13b0ea50600391f">Maths and trigonometry cheat sheet for 2D games</a></li>
 		<li><a href="https://github.com/js13kGames/js13kserver">js13kserver</a> - sandboxed JavaScript game server</li>
-		<li><a href="https://github.com/xem/js13k-level-editor">js13k-level-editor</a> - A 1kb 2D map editor that you can use for your game (or include in your game!)</li>
-		<li><a href="https://github.com/xenohunter/timestore">timestore</a> - a library to manage multiple timers inside separate contexts</li>
+		<li><a href="https://github.com/xem/js13k-level-editor">js13k-level-editor</a> - 1kb 2D map editor that you can use for your game (or include in your game!)</li>
+		<li><a href="https://github.com/xenohunter/timestore">timestore</a> - library to manage multiple timers inside separate contexts</li>
 	</ul>
 
 	<h3 id="tuts">Tutorials</h3>
