--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 		<li><a href="http://closure-compiler.appspot.com/home">Closure Compiler</a> - compile your code</li>
 		<li><a href="https://github.com/mishoo/UglifyJS">UglifyJS</a> - JavaScript parser / mangler / compressor / beautifier library for NodeJS</li>
 		<li><a href="http://www.slideshare.net/DavidGoemans/extreme-javascript-minification">Extreme Javascript minification</a> - compression experiments</li>
+		<li><a href="http://www.advancemame.it/download">ADVZIP</a> - Zip file optimizer/recompressor (can reduce a 13kb zip to 9~11kb)
 	</ul>
 
 	<h3 id="other">Other tools</h3>
@@ -111,6 +112,7 @@
 		<li><a href="https://gist.github.com/xem/99930986c5333125a13b0ea50600391f">Trigonometry cheat sheet</a></li>
 		<li><a href="https://gamedevacademy.org/js13kgames-tutorial-video-series/">js13kGames tutorial video series by Zenva Academy</a></li>
 		<li><a href="https://xem.github.io/articles/#jsgamesinputs">How to support arrow keys, WASD and ZQSD keyboard inputs in just 160b of JS</a></li>
+		<li><a href="http://xem.github.io/articles/#css3d">How to make games with CSS3D</a></li>
 	</ul>
 
 	<h3 id="vids">Videos</h3>
