--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 		<li><a href="https://github.com/xem/platform-engine">platform-engine</a> - 2D platform engine that handles collisions, slopes, rotations, etc.</li>
 		<li><a href="https://github.com/voronianski-on-games/js13kGames-boilerplate">js13kGames-boilerplate</a> - includes game loop, utility functions and webpack config to package game with just one command</li>
 		<li><a href="https://github.com/sz-piotr/js13k-webpack-starter">js13k-webpack-starter</a> - build with a single command, dev server, es2015 support</li>
+		<li><a href="https://github.com/aerze/js13k-base">js13k-base</a> - simple commands, a server, and a sample game + framework</li>
 	</ul>
 
 	<h3 id="sfx">Sound and music</h3>
