Add Kontra micro-library

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		<li><a href="https://github.com/aerze/js13k-base">js13k-base</a> - simple commands, a server, and a sample game + framework</li>
 		<li><a href="https://github.com/xem/responsiveTouchGameFramework">responsiveTouchGameFramework</a> - responsive canvas game framework with unified mouse / tactile inputs</li>
 		<li><a href="https://twitter.com/MaximeEuziere/status/883044404453294080">Tweetwork</a> - a 140b canvas game framework</li>
+		<li><a href="https://straker.github.io/kontra/">Kontra</a> - A lightweight JavaScript gaming micro-library, optimized for js13kGames.</li>
 	</ul>
 
 	<h3 id="sfx">Sound and music</h3>
