--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<li><a href="https://github.com/nicolas-van/sonant-x">Sonant-X</a> - small JavaScript synthesizer library</li>
 		<li><a href="http://www.cappel-nord.de/webaudio/">Web Audio API prototypes</a> - demos using the Web Audio API to synthesize audio in the browser</li>
 		<li><a href="https://github.com/kevincennis/TinyMusic">TinyMusic</a> - simple, lightweight music synth/sequencer in JavaScript using the Web Audio API</li>
-		<li><a href="https://github.com/xem/miniPiano">miniPiano</a> - JS synth featuring a graphical editor and small JS output</li>
+		<li><a href="https://github.com/xem/miniMusic">miniMusic</a> - Draw a melody with your mouse, choose the tempo, volume and base note, then export it as a super short JS code</li>
 	</ul>
 
 	<h3 id="gfx">Artwork and fonts</h3>
