--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 		<li><a href="https://github.com/xem/responsiveTouchGameFramework">responsiveTouchGameFramework</a> - responsive canvas game framework with unified mouse / tactile inputs</li>
 		<li><a href="https://twitter.com/MaximeEuziere/status/883044404453294080">Tweetwork</a> - a 140b canvas game framework</li>
 		<li><a href="https://straker.github.io/kontra/">Kontra</a> - A lightweight JavaScript gaming micro-library, optimized for js13kGames.</li>
+		<li><a href="https://github.com/Rybar/js13k2017kit">JS13K 2017 Kit</a> - A pico-8 like graphics engine and game boilerplate.</li>
 	</ul>
 
 	<h3 id="sfx">Sound and music</h3>
