--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
 	<h3 id="mini">Minification</h3>
 	<ul>
+		<li><a href="https://babeljs.io/repl">babeljs</a> - JS (ES2015/2016/2017) minifier based on Babili. Choose your flavor in the "presets" dropdown</li>
 		<li><a href="http://dean.edwards.name/packer/">Packer</a> - JavaScript compressor</li>
 		<li><a href="http://javascript-minifier.com/">JavaScript Minifier</a> - minify your JavaScript</li>
 		<li><a href="https://github.com/Siorki/RegPack">RegPack</a> -  self-contained packer for size-constrained JS code</li>
