--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 		<li><a href="https://github.com/mishoo/UglifyJS">UglifyJS</a> - JavaScript parser / mangler / compressor / beautifier library for NodeJS</li>
 		<li><a href="http://www.slideshare.net/DavidGoemans/extreme-javascript-minification">Extreme Javascript minification</a> - compression experiments</li>
 		<li><a href="http://www.advancemame.it/download">ADVZIP</a> - Zip file optimizer/recompressor (can reduce a 13kb zip to 9~11kb)
+		<li><a href="https://github.com/xem/miniMinifier/">miniMinifier</a> - Tiny (but super efficient) HTML and CSS minifiers
 	</ul>
 
 	<h3 id="other">Other tools</h3>
