--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 		<li><a href="https://github.com/aerze/js13k-base">js13k-base</a> - simple commands, a server, and a sample game + framework</li>
 		<li><a href="https://github.com/xem/responsiveTouchGameFramework">responsiveTouchGameFramework</a> - responsive canvas game framework with unified mouse / tactile inputs</li>
 		<li><a href="https://twitter.com/MaximeEuziere/status/883044404453294080">Tweetwork</a> - a 140b canvas game framework</li>
-		<li><a href="https://straker.github.io/kontra/">Kontra</a> - A lightweight JavaScript gaming micro-library, optimized for js13kGames.</li>
-		<li><a href="https://github.com/Rybar/js13k2017kit">JS13K 2017 Kit</a> - A pico-8 like graphics engine and game boilerplate.</li>
+		<li><a href="https://straker.github.io/kontra/">Kontra</a> - a lightweight JavaScript gaming micro-library, optimized for js13kGames</li>
+		<li><a href="https://github.com/Rybar/js13k2017kit">JS13K 2017 Kit</a> - a pico-8 like graphics engine and game boilerplate</li>
 	</ul>
 
 	<h3 id="sfx">Sound and music</h3>
@@ -64,7 +64,7 @@
 		<li><a href="https://github.com/nicolas-van/sonant-x">Sonant-X</a> - small JavaScript synthesizer library</li>
 		<li><a href="http://www.cappel-nord.de/webaudio/">Web Audio API prototypes</a> - demos using the Web Audio API to synthesize audio in the browser</li>
 		<li><a href="https://github.com/kevincennis/TinyMusic">TinyMusic</a> - simple, lightweight music synth/sequencer in JavaScript using the Web Audio API</li>
-		<li><a href="https://github.com/xem/miniMusic">miniMusic</a> - Draw a melody with your mouse, choose the tempo, volume and base note, then export it as a super short JS code</li>
+		<li><a href="https://github.com/xem/miniMusic">miniMusic</a> - draw a melody with your mouse, choose the tempo, volume and base note, then export it as a super short JS code</li>
 	</ul>
 
 	<h3 id="gfx">Artwork and fonts</h3>
@@ -86,15 +86,15 @@
 
 	<h3 id="mini">Minification</h3>
 	<ul>
-		<li><a href="https://babeljs.io/repl">babeljs</a> - JS (ES2015/2016/2017) minifier based on Babili. Choose your flavor in the "presets" dropdown</li>
+		<li><a href="https://babeljs.io/repl">babeljs</a> - JS (ES2015/2016/2017) minifier based on Babili, choose your flavor in the "presets" dropdown</li>
 		<li><a href="http://dean.edwards.name/packer/">Packer</a> - JavaScript compressor</li>
 		<li><a href="http://javascript-minifier.com/">JavaScript Minifier</a> - minify your JavaScript</li>
 		<li><a href="https://github.com/Siorki/RegPack">RegPack</a> -  self-contained packer for size-constrained JS code</li>
 		<li><a href="http://closure-compiler.appspot.com/home">Closure Compiler</a> - compile your code</li>
 		<li><a href="https://github.com/mishoo/UglifyJS">UglifyJS</a> - JavaScript parser / mangler / compressor / beautifier library for NodeJS</li>
 		<li><a href="http://www.slideshare.net/DavidGoemans/extreme-javascript-minification">Extreme Javascript minification</a> - compression experiments</li>
-		<li><a href="http://www.advancemame.it/download">ADVZIP</a> - Zip file optimizer/recompressor (can reduce a 13kb zip to 9~11kb)
-		<li><a href="https://github.com/xem/miniMinifier/">miniMinifier</a> - Tiny (but super efficient) HTML and CSS minifiers
+		<li><a href="http://www.advancemame.it/download">ADVZIP</a> - zip file optimizer / recompressor (can reduce a 13kb zip to 9~11kb)</li>
+		<li><a href="https://github.com/xem/miniMinifier/">miniMinifier</a> - tiny (but super efficient) HTML and CSS minifiers</li>
 	</ul>
 
 	<h3 id="other">Other tools</h3>
