Initial A-Frame resources

--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
 		<li><a href="https://github.com/xem/miniMinifier/">miniMinifier</a> - tiny (but super efficient) HTML and CSS minifiers</li>
 	</ul>
 
+	<h3 id="aframe">A-Frame resources</h3>
+	<ul>
+		<li><a href="https://aframe.io/docs/0.6.0/introduction/#getting-started">A-Frame Documentation</a> - introduciton to A-Frame</li>
+		<li><a href="https://aframevr-slack.herokuapp.com/">A-Frame Slack invitation</a> - ask questions here</li>
+		<li><a href="https://aframe.io/aframe-registry/">A-Frame Registry</a> - useful components</li>
+		<li><a href="https://github.com/aframevr/awesome-aframe">Awesome A-Frame</a> - many more A-Frame resources & examples</li>
+	</ul>
+
 	<h3 id="other">Other tools</h3>
 	<ul>
 		<li><a href="http://videogamena.me/">Video Game Name Generator</a> - generate a name for your game</li>
@@ -122,6 +130,7 @@
 		<li><a href="https://gamedevacademy.org/js13kgames-tutorial-video-series/">js13kGames tutorial video series by Zenva Academy</a></li>
 		<li><a href="https://xem.github.io/articles/#jsgamesinputs">How to support arrow keys, WASD and ZQSD keyboard inputs in just 160b of JS</a></li>
 		<li><a href="http://xem.github.io/articles/#css3d">How to make games with CSS3D</a></li>
+		<li><a href="https://aframe.io/aframe-school/#/">A-Frame School</a></li>
 	</ul>
 
 	<h3 id="vids">Videos</h3>
