--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		<li><a href="https://github.com/xem/js13k-level-editor">js13k-level-editor</a> - 1kb 2D map editor that you can use for your game (or include in your game!)</li>
 		<li><a href="https://github.com/xem/3D-level-editor">3D-level-editor</a> - CSS3D map editor with customizable 3D shapes and 2D sprites</li>
 		<li><a href="https://github.com/xenohunter/timestore">timestore</a> - library to manage multiple timers inside separate contexts</li>
-		<li><a href="https://github.com/stasm/innerself">innerself</a> - a tiny (0.4kB) React/Redux-like view & state management for your game's UI</li>
+		<li><a href="https://github.com/stasm/innerself">innerself</a> - a React/Redux-like view and state management for your game's UI, in less than 400 bytes</li>
 	</ul>
 
 	<h3 id="tuts">Tutorials</h3>
