Add new music creator
Add a google music creator to the list.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
 	<h3 id="sfx">Sound and music</h3>
 	<ul>
+		<li><a href="https://www.google.com/logos/2017/fischinger/fischinger17.html">Google Music Creator</a></li>
 		<li><a href="http://sb.bitsnbites.eu/">SoundBox</a> - an HTML5 synth music tracker</li>
 		<li><a href="https://github.com/mneubrand/jsfxr">jsfxr</a> - <a href="http://www.superflashbros.net/as3sfxr/">as3sfxr</a> synth port to JavaScript</li>
 		<li><a href="http://codepen.io/jackrugile/blog/arcade-audio-for-js13k-games">Arcade audio for js13kGames</a> - blog post about generating your own sound effects</li>
