Adding more minification tools
Adding two more minification tools to the resources website on js13kgames.

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
 
 	<h3 id="mini">Minification</h3>
 	<ul>
+		<li><a href="http://www.minifier.org/">Minify</a> - a JavaScript and CSS minifier</li>
+		<li><a href="https://jscompress.com/">JSCompress</a> - a compression tool for javascript</li>
 		<li><a href="https://babeljs.io/repl">babeljs</a> - JS (ES2015/2016/2017) minifier based on Babili, choose your flavor in the "presets" dropdown</li>
 		<li><a href="http://dean.edwards.name/packer/">Packer</a> - JavaScript compressor</li>
 		<li><a href="http://javascript-minifier.com/">JavaScript Minifier</a> - minify your JavaScript</li>
