--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
 		<li><a href="https://www.youtube.com/playlist?list=PL94Kxubp5fYe3XwC3rIeybFUhIkeuhJym">Let's play vids for js13k 2015</a> - YouTube playlist for 2015 entries by Keith Karnage</li>
 		<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85czCO1G2UgwvxRpzGw8P2Bn">Jupi Plays Indie Games 2015</a> - YouTube playlist for 2015 entries by Jupiter Hadley</li>
 		<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85e_jRg9g12GhpATCW1ETrb1">Jupi Plays Indie Games 2016</a> - YouTube playlist for 2016 entries by Jupiter Hadley</li>
+		<li><a href="https://www.youtube.com/watch?v=8gSTuXrFyIc">JS13K 2017 games compilation</a> - YouTube video by Agar3s</li>
+		<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85c4UPV3J1onIf-Qv13GJ7H8">Jupi Plays Indie Games 2017</a> - YouTube playlist for 2017 entries by Jupiter Hadley</li>
+
+		
 	</ul>
 
 	<h3 id="posts">Blog posts and post mortems</h3>
