ZPNG Minifier - closing #44

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 		<li><a href="https://github.com/xem/miniMinifier/">miniMinifier</a> - tiny (but super efficient) HTML and CSS minifiers</li>
 		<li><a href="http://www.minifier.org/">Minify</a> - a JavaScript and CSS minifier</li>
 		<li><a href="https://jscompress.com/">JSCompress</a> - a compression tool for javascript</li>
+		<li><a href="https://github.com/codegolf/zpng">ZPNG Minifier</a> - in-browser jsExe</li>
 	</ul>
 
 	<h3 id="aframe">A-Frame resources</h3>
