--- a/index.html
+++ b/index.html
@@ -132,11 +132,10 @@
 		<li><a href="http://www.playfuljs.com/a-first-person-engine-in-265-lines/">A first-person engine in 265 lines</a></li>
 		<li><a href="http://ojdon.github.io/blog/HTML5-Game-Development-Gulp-Workflow">HTML5 game development Gulp workflow</a></li>
 		<li><a href="https://gist.github.com/xem/99930986c5333125a13b0ea50600391f">Trigonometry cheat sheet</a></li>
-		<li><a href="https://gamedevacademy.org/js13kgames-tutorial-video-series/">js13kGames tutorial video series by Zenva Academy</a></li>
+		<li><a href="https://gamedevacademy.org/js13kgames-tutorial-video-series/">js13kGames tutorial video series by Zenva Academy</a> - create a Frogger game in 13kb or less</li>
 		<li><a href="https://xem.github.io/articles/#jsgamesinputs">How to support arrow keys, WASD and ZQSD keyboard inputs in just 160b of JS</a></li>
 		<li><a href="http://xem.github.io/articles/#css3d">How to make games with CSS3D</a></li>
 		<li><a href="https://aframe.io/aframe-school/">A-Frame School</a></li>
-		<li><a href="https://gamedevacademy.org/js13kgames-tutorial-video-series/">js13kGames tutorial video series</a> - create a Frogger game in 13kb or less</li>
 	</ul>
 
 	<h3 id="vids">Videos</h3>
