--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		<li><a href="https://aframe.io/aframe-school/">A-Frame School</a></li>
 	</ul>
 
-	<h3 id="vids">Videos</h3>
+	<h3 id="vids">Videos and audio</h3>
 	<ul>
 		<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85cletut9NULJwgEtN01TYWm">Jupi Plays Indie Games 2014</a> - YouTube playlist with Jupiter Hadley playing all the games from the 2014 edition</li>
 		<li><a href="https://www.youtube.com/playlist?list=PL94Kxubp5fYe3XwC3rIeybFUhIkeuhJym">Let's play vids for js13k 2015</a> - YouTube playlist for 2015 entries by Keith Karnage</li>
@@ -146,6 +146,7 @@
 		<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85e_jRg9g12GhpATCW1ETrb1">Jupi Plays Indie Games 2016</a> - YouTube playlist for 2016 entries by Jupiter Hadley</li>
 		<li><a href="https://www.youtube.com/watch?v=8gSTuXrFyIc">JS13K 2017 games compilation</a> - YouTube video by Agar3s</li>
 		<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85c4UPV3J1onIf-Qv13GJ7H8">Jupi Plays Indie Games 2017</a> - YouTube playlist for 2017 entries by Jupiter Hadley</li>
+		<li><a href="https://soundcloud.com/the-game-developers-radio/game-design-daily-068-game-dev-article-round-up-part-02">The Game Developers Radio: Game Design Daily 068</a> - game dev article round up part 02 on SoundCloud</li>
 	</ul>
 
 	<h3 id="posts">Blog posts and post mortems</h3>
