--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 		<li><a href="http://www.piskelapp.com/">Piskel</a> - Pixel Art and Animated Sprites</li>
 		<li><a href="http://www.aseprite.org/">aseprite</a> - animated sprite editor &amp; pixel art tool</li>
 		<li><a href="http://pyxeledit.com">Pyxel Edit</a> - is a pixel art editor designed to make it fun and easy to make tilesets, levels and animations</li>
+		<li><a href="https://xem.github.io/miniPixelFont/">mini pixel font</a> - Generate your pixel-art font with a few lines of JS
 	</ul>
 
 	<h3 id="mini">Minification</h3>
