--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
 				<li><a href="http://zofiakorcz.pl/lost-in-cyberspace-vr">Lost in Cyberspace</a> by Zosia Korcz</li>
 				<li><a href="https://www.mattiafortunati.com/a-day-in-the-life-and-js13kgames-2017/">A Day in the Life</a> by Mattia Fortunati</li>
 				<li><a href="https://medium.com/@zendrael/ipad-only-gamedev-11-enough-to-compete-6aeb1f033668">Lost in Jungle</a> by Zendrael</li>
+				<li><a href="https://github.com/gre/js13k-2017#mea-culpa">AMAZ3D</a> by Gaëtan Renaudeau</li>
 			</ul>
 		</li>
 	</ul>
