Included an youtube video link
The contest introductory video by its organizer

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 		<li><a href="https://www.youtube.com/watch?v=8gSTuXrFyIc">JS13K 2017 games compilation</a> - YouTube video by Agar3s</li>
 		<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85c4UPV3J1onIf-Qv13GJ7H8">Jupi Plays Indie Games 2017</a> - YouTube playlist for 2017 entries by Jupiter Hadley</li>
 		<li><a href="https://soundcloud.com/the-game-developers-radio/game-design-daily-068-game-dev-article-round-up-part-02">The Game Developers Radio: Game Design Daily 068</a> - game dev article round up part 02 on SoundCloud</li>
+		<li><a href="https://www.youtube.com/watch?v=RdOram609vU">How to squeeze a HTML5 game in 13 kB?</a> - Andrzej Mazur's introductory speech. Subtitles by B0dz1o</li>
 	</ul>
 
 	<h3 id="posts">Blog posts and post mortems</h3>
