--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<nav>
 		<a href="http://js13kgames.com">js13kGames</a>
 		<ul>
+			<li><a href="http://2018.js13kgames.com">2018</a></li>
 			<li><a href="http://2017.js13kgames.com">2017</a></li>
 			<li><a href="http://2016.js13kgames.com">2016</a></li>
 			<li><a href="http://2015.js13kgames.com">2015</a></li>
@@ -224,7 +225,7 @@
 
 <footer>
 	<div>
-		&copy; js13kGames 2012-2017
+		&copy; js13kGames 2012-2018
 		<p>Created and maintained by <a target="_blank" href="http://end3r.com">Andrzej Mazur</a> from <a target="_blank" href="http://enclavegames.com">Enclave Games</a>.</p>
 	</div>
 </footer>
