--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		<li><a href="https://github.com/voronianski-on-games/js13kGames-boilerplate">js13kGames-boilerplate</a> - includes game loop, utility functions and webpack config to package game with just one command</li>
 		<li><a href="https://github.com/sz-piotr/js13k-webpack-starter">js13k-webpack-starter</a> - build with a single command, dev server, es2015 support</li>
 		<li><a href="https://github.com/aerze/js13k-base">js13k-base</a> - simple commands, a server, and a sample game + framework</li>
+		<li><a href="https://github.com/mtmckenna/js13kgames-parcel-starter">js13kgames-parcel-starter</a> - starter repo to build, zip, and check the file size of your game with a single command</li>
 		<li><a href="https://github.com/xem/responsiveTouchGameFramework">responsiveTouchGameFramework</a> - responsive canvas game framework with unified mouse / tactile inputs</li>
 		<li><a href="https://twitter.com/MaximeEuziere/status/883044404453294080">Tweetwork</a> - a 140b canvas game framework</li>
 		<li><a href="https://straker.github.io/kontra/">Kontra</a> - a lightweight JavaScript gaming micro-library, optimized for js13kGames</li>
