Add link to my boilerplate repository

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<li><a href="http://jallegro.sos.gd/">jAllegro</a> - JavaScript port of a game programming library</li>
 		<li><a href="https://github.com/geoffb/ocelot">Ocelot</a> - minimalist HTML5 2D game engine, Ocelot aims for simplicity and small filesize</li>
 		<li><a href="https://github.com/ooflorent/js13k-boilerplate">js13k-boilerplate</a> - js13kGames boilerplate</li>
+		<li><a href="https://github.com/shreyasminocha/js13k-boilerplate">JS13k Gulp workflow</a> - A gulp-powered workflow with source file minification, image optimization and zip generation</li>
 		<li><a href="https://github.com/lucaspenney/js13k-toolkit">js13k-toolkit</a> - starter repository for js13kGames, a set of tools for developing a JS game and keeping it under 13kb</li>
 		<li><a href="https://github.com/spmurrayzzz/js13k-requirejs">js13k-requirejs</a> - require.js-powered application template with build tools</li>
 		<li><a href="https://github.com/spmurrayzzz/js13k-rollup">js13k-rollup</a> - gulp/rollup.js powered template with support for ES2015 modules and build tools</li>
