--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 		<li><a href="https://twitter.com/MaximeEuziere/status/883044404453294080">Tweetwork</a> - a 140b canvas game framework</li>
 		<li><a href="https://straker.github.io/kontra/">Kontra</a> - a lightweight JavaScript gaming micro-library, optimized for js13kGames</li>
 		<li><a href="https://github.com/Rybar/js13k2017kit">JS13K 2017 Kit</a> - a pico-8 like graphics engine and game boilerplate</li>
+        <li><a href="https://github.com/jonathan-vallet/js13k-starter">JS13K starter</a> - gulp starter watching changes, and tasks to compile, minify, inline, and zip you game for better optimization</li>
 	</ul>
 
 	<h3 id="sfx">Sound and music</h3>
