--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<li><a href="https://github.com/Rybar/js13k2017kit">JS13K 2017 Kit</a> - a pico-8 like graphics engine and game boilerplate</li>
 	        <li><a href="https://github.com/jonathan-vallet/js13k-starter">JS13K starter</a> - gulp starter watching changes, and tasks to compile, minify, inline, and zip you game for better optimization</li>
 	        <li><a href="https://github.com/kutuluk/js13k-ecs">js13k-ecs</a> - a 1kb entity component system, designed for js13k</li>
-	        <li><a href="https://github.com/kutuluk/js13k-2d">js13k-2d</a> - a &lt;2kb WebGL renderer, designed for js13k</li>
+	        <li><a href="https://github.com/kutuluk/js13k-2d">js13k-2d</a> - a &lt;2kb 2D WebGL renderer, designed for js13k</li>
 	</ul>
 
 	<h3 id="sfx">Sound and music</h3>
